# 2023_24---IRTM---Group-Project

./: .~lock.combined_res.csv#  README.md  combined_res.csv  pyproject.toml
data/: .gitignore  README.md
output/: README.md
py_css/: main.py
py_css/indexer/: basic_index.py  doc2query_index.py  index.py
py_css/interface/: cli.py  eval.py  kaggle.py  run_queries.py
py_css/models/: T5Rewriter.py  base.py  baseline.py  baseline_prf.py  doc2query.py  doc2query_prf.py  model_parameters.py
report/: README.md  main.bib  main.tex
scripts/: doc2query-t5.py
