[project]
name = "py_css"
version = "0.0.1"
description = "Conversational Search System"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires = [
    "rich"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
py_css = "py_css.interface.cli:main"

