[project]
name = "py_css"
version = "0.0.1"
description = "Conversational Search System"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires = [
    "rich",
    "python-terrier"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
py_css = "py_css.main:main"

[tool.hatch.build.targets.wheel]
only-include = ["py_css", "data"]

[tool.hatch.build.targets.wheel.sources]
"py_css" = "py_css"
"data" = "py_css/data"

